# ai-researcher

./: AGENT_V3_TOOLS_INTEGRATION.md  AINVOKE_FIX.md  ALL_FIXES_COMPLETE.md  ASYNC_TOOLS_FIX.md  DATASET_TOOLS_AGENT_INTEGRATION.md  DATASET_TOOLS_CHECKLIST.md  DATASET_TOOLS_IMPLEMENTATION.md  DATASET_TOOLS_README.md  DOCS_INDEX.md  DOCUMENTATION_UPDATES_COMPLETE.md  EXECUTOR_OUTPUT_IMPLEMENTATION.md  EXECUTOR_OUTPUT_SUMMARY.md  EXECUTOR_WORKFLOW_DIAGRAM.md  FEATURES.md  GRAPH_FLOW_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOGGING_QUICK_REF.txt  MANIFEST.in  MCP_INTEGRATION_SUCCESS.md  MCP_INTEGRATION_SUMMARY.md  MCP_QUICK_REFERENCE.md  MCP_UNIVERSAL_INTEGRATION_COMPLETE.md  MPC_MODULE_CONVERSION_SUMMARY.md  PARSING_ERROR_FIX.md  QUICK_REFERENCE.md  QUICK_REFERENCE_MCP.md  REFACTORING_SUMMARY.md  REPO_ROOT_FIX_COMPLETE.md  REVIEWER_JSON_PARSING_FIX.md  ROUTING_FIX_SUMMARY.md  TEST_REFACTORING_COMPLETE.md  TEST_REFACTORING_QUICK_REF.md  TEST_REFACTORING_SUMMARY.md  TODO.md  WORKING_DIR_FIX.md  WORKING_DIR_IMPLEMENTATION.md  archive_docs.sh  move_to_archive.py  pyproject.toml  (+24 more)
agent_v1/: agent.py  llm.py  run.py  state.py  tools.py
agent_v2/: agent.py  tooling.py
agent_v3_claude/: README.md  __init__.py  agent.py  cli.py  tools.py
ai_researcher/: __init__.py
ai_researcher/agent_v1/: MCP_README.md  (+8 more)
ai_researcher_tools/: __init__.py  fs_tools.py  git_tools.py
docs/: ADVANCED.md  AGENT_README_PATH_FIX.md  AGENT_V3_LOGGING_EXAMPLES.md  AGENT_V3_LOGGING_UPDATE.md  DATASET_TOOLS.md  DATETIME_PROMPTS_UPDATE.md  DOCS_INDEX.md  EDIT_FILE_IMPLEMENTATION.md  EXECUTOR_OUTPUT_SUMMARY.md  GETTING_STARTED.md  GREP_SEARCH_FILE_FIX.md  GREP_SEARCH_INTEGRATION.md  HUGGINGFACE_MCP_INTEGRATION.md  HUGGINGFACE_MCP_INTEGRATION_CHANGELOG.md  HUGGINGFACE_MCP_INTEGRATION_COMPLETE.md  HUGGINGFACE_MCP_INTEGRATION_SUMMARY.md  HUGGINGFACE_MCP_QUICK_REF.md  LLM_USAGE_LOGGING.md  MCP_ALL_AGENTS_GUIDE.md  NETWORK_ACCESS_FIX.md  PIP_INSTALL_NETWORK_QUICK_REF.md  QUICK_REFERENCE.md  REFACTORING_COMPLETE.md  RG_COMMAND_NOT_FOUND_FIX.md  TEST_REFACTORING_BEFORE_AFTER.md  TODO.md  TOOL_AUDIT_SUMMARY.md  TOOL_SYNC_COMPLETE.md
examples/: demo_agent_v1_mcp.py  demo_dataset_tools.py  demo_edit_file.py  example_mcp_integration.py
tests/: README.md  conftest.py  test_agent_v2_tooling.py  test_agent_v3_pruning.py  test_edit_file.py  test_git_tools.py  test_python_tools.py  test_python_venv_tools.py
(+56 files in other folders)
