[project]
name = "ai-researcher"
version = "0.1.0"
description = "Autonomous AI agent implementations for research and development tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dan", email = "dan@example.com"}
]
keywords = ["ai", "agent", "research", "automation", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "together>=1.2.0",
  "langchain>=0.2.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-anthropic>=0.1.0",
  "pydantic>=2.0",
  "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-researcher-agent-v1 = "ai_researcher.agent_v1.run:main"
ai-researcher-agent-v2 = "ai_researcher.agent_v2.langgraph_agent:main"
ai-researcher-agent-v3 = "ai_researcher.agent_v3_claude.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_researcher*"]
exclude = ["tests*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -v"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
